# oh-my-dear-imgui

./: .buildinfo  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  NodeEditor.json  README.md  defs.html  genindex.html  getting-started.html  index.html  install.html  install.sh  objects.inv  references.html  requirements.txt  search.html  searchindex.js  shell.nix
.github/workflows/: docs.yml
_sources/: index.rst.txt  references.rst.txt
_sources/refs/: app.rst.txt  fontmanager.rst.txt  gridxy.rst.txt  logger.rst.txt  menubar.rst.txt  pickermanager.rst.txt  safe_components.rst.txt  screenshotmanager.rst.txt  toastmanager.rst.txt
_static/: pygments.css
_static/css/: hacks.css
cmake/: dependencies.cmake  oh-my-dear-imguiConfig.cmake.in
docs/: conf.py  defs.rst  getting-started.rst  index.rst  install.rst  references.rst
docs/_static/css/: hacks.css
docs/refs/: app.rst  fontmanager.rst  gridxy.rst  logger.rst  pcolorplot.rst  pickermanager.rst  plot.rst  points.rst  scatterplot.rst  screenshotmanager.rst  state.rst  timer.rst  toastmanager.rst
examples/: CMakeLists.txt  example-app.cpp  example-min.cpp  example-plotting.cpp
omdi/: CMakeLists.txt  omdi.hpp  utils.cpp  utils.h
omdi/assets/: Makefile  README.md
omdi/components/: app.cpp  app.h  defaults.h  menubar.cpp  menubar.h  safe.cpp  safe.h  uiconfig.cpp  uiconfig.h
omdi/containers/: containers.h
omdi/core/: app.cpp  app.h  defaults.h  state.cpp  state.h
omdi/examples/: field.cpp  field.h  pointcloud.cpp  pointcloud.h  sim.h
omdi/gl/: glad.c
omdi/implot-gpu/: implot.cpp  implot.h  implot_backend.h  implot_backend_impl_opengl3.cpp  plotters.cpp  plotters.h
omdi/implot_wrapper/: README.md  implot_backend.h  implot_impl_opengl3.cpp  implot_impl_opengl3.h  implot_wrapper.cpp  implot_wrapper.h
omdi/include/glad/: glad.h
omdi/managers/: fonts.cpp  fonts.h  picker.cpp  picker.h  screenshot.cpp  screenshot.h  state.cpp  state.h  toasts.cpp  toasts.h
omdi/plots/: containers.h  pcolor.cpp  pcolor.h  plot.h  scatter.cpp  scatter.h
omdi/plots/renderers/: renderers.h
omdi/style/: themes.cpp  themes.h
refs/: app.html  fontmanager.html  gridxy.html  logger.html  menubar.html  pcolorplot.html  pickermanager.html  plot.html  points.html  safe_components.html  scatterplot.html  screenshotmanager.html  state.html  timer.html  toastmanager.html
renderers/: heatmap_cart.cpp  heatmap_cart.h  transformers.h
src/: CMakeLists.txt  main.cpp  utils.cpp  utils.h  window.cpp  window.h
src/assets/: .gitignore  CustomImGuiFileDialogConfig.h  Makefile  README.md
src/components/: dialog.cpp  dialog.h  menubar.cpp  menubar.h  picker.cpp  picker.h  safe.cpp  safe.h  state.cpp  state.h  toasts.cpp  toasts.h  uiconfig.cpp  uiconfig.h  window.cpp  window.h
src/style/: fonts.cpp  fonts.h  icons.h  imgui_file_dialog_config.h  themes.cpp  themes.h
